# rusteeze

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  prometheus.yml  rust-toolchain.toml
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml  ci.yml
crates/rusteeze-api/: Cargo.toml
crates/rusteeze-api/src/: error.rs  handlers.rs  lib.rs  middleware.rs  routes.rs  server.rs  types.rs
crates/rusteeze-cli/: Cargo.toml
crates/rusteeze-cli/src/: lib.rs  main.rs  output.rs  progress.rs
crates/rusteeze-cli/src/commands/: benchmark.rs  chat.rs  download.rs  generate.rs  info.rs  mod.rs  serve.rs  validate.rs
crates/rusteeze-config/: Cargo.toml
crates/rusteeze-config/src/: engine.rs  error.rs  lib.rs  loader.rs  model.rs  server.rs  validation.rs
crates/rusteeze-core/: Cargo.toml
crates/rusteeze-core/benches/: core_bench.rs
crates/rusteeze-core/src/: config.rs  device.rs  error.rs  lib.rs  request.rs  response.rs  sampling.rs  sequence.rs  types.rs
crates/rusteeze-engine/: Cargo.toml
crates/rusteeze-engine/benches/: scheduler.rs
crates/rusteeze-engine/src/: batch.rs  batch_optimizer.rs  batching_v2.rs  block_manager.rs  engine.rs  flash_attention.rs  kernel_fusion.rs  lib.rs  memory_pool.rs  numa.rs  parallel_sampler.rs  prompt_env.rs  quantization.rs  recursive_engine.rs  recursive_scheduler.rs  router.rs  sampler.rs  scheduler.rs  sequence.rs  simd_dispatch.rs  simd_ops.rs  speculative.rs  tensor_parallel.rs  variable_store.rs  worker.rs  zero_copy.rs
crates/rusteeze-metrics/: Cargo.toml
crates/rusteeze-metrics/src/: collector.rs  counters.rs  gauges.rs  histograms.rs  lib.rs  prometheus.rs  tracing_setup.rs
crates/rusteeze-model/: Cargo.toml
crates/rusteeze-model/src/: config.rs  lib.rs  loader.rs  weights.rs
crates/rusteeze-model/src/architectures/: common.rs  llama.rs  mistral.rs  mod.rs
crates/rusteeze-tensor/: Cargo.toml
crates/rusteeze-tensor/benches/: tensor_ops.rs
crates/rusteeze-tensor/src/: attention.rs  cache.rs  lib.rs  memory.rs  ops.rs  quantize.rs
crates/rusteeze-tokenizer/: Cargo.toml
crates/rusteeze-tokenizer/src/: chat_template.rs  error.rs  lib.rs  tokenizer.rs
