[package]
name = "rusteeze-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and traits for Rusteeze LLM inference engine"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
bytes.workspace = true
half.workspace = true
num-traits.workspace = true
bytemuck.workspace = true
smallvec.workspace = true
indexmap.workspace = true
derive_more.workspace = true
async-trait.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rstest.workspace = true
tempfile.workspace = true

[[bench]]
name = "core_bench"
harness = false
